--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
     <link rel="shortcute icon" type="image/x-icon" href="favicon_flower.ico"/>
-    <title>my CountDown design</title>
+    <title>CountDown to 2024</title>
 </head>
 <body>
     
